Fix welcome images too big

--- a/www/css/tpgwidget_app.css
+++ b/www/css/tpgwidget_app.css
@@ -55,7 +55,7 @@ body {
 .welcomescreen-picture img {
     margin-top: 10px;
     max-width: 80%;
-    max-height: 50%;
+    max-height: 70vh;
 }
 
 .welcomescreen-text {
